made some adjustments based on stall behavior.

--- a/publications/2021AutoML/python/autosklearn-searchspace.ipynb
+++ b/publications/2021AutoML/python/autosklearn-searchspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from sklearn.svm import *\n",
     "from sklearn.cluster import *\n",
     "from sklearn.kernel_approximation import *\n",
+    "from sklearn.gaussian_process import *\n",
     "import sklearn.discriminant_analysis\n",
     "import sklearn.neural_network\n",
     "from sklearn.ensemble import *\n",
@@ -25,18 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "import autosklearn.pipeline.components.classification as algos_class\n",
     "import autosklearn.pipeline.components.data_preprocessing as algos_data_preprocessing\n",
-    "import autosklearn.pipeline.components.feature_preprocessing as algos_feature_preprocessing"
+    "import autosklearn.pipeline.components.feature_preprocessing as algos_feature_preprocessing\n",
+    "import autosklearn.pipeline.components.regression as algos_regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +50,7 @@
        "    fit_prior, Type: Categorical, Choices: {True, False}, Default: True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +70,7 @@
        "True"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def get_autosklearn_searchspace():\n",
+    "def get_autosklearn_searchspace_classification():\n",
     "    \n",
     "    def get_params(cls):\n",
     "        params = []\n",
@@ -192,7 +194,7 @@
     "        props = pp.get_properties()\n",
     "        #print(pp)\n",
     "        #print(\"handles_nominal_values\" in props and props[\"handles_nominal_values\"], \"handles_numerical_features\" in props and props[\"handles_numerical_features\"])\n",
-    "        pre_data_search_space.append({\"class\": data_preprocessors[pp].__module__ + \".\" + data_preprocessors[pp].__name__, \"params\": params})\n",
+    "        pre_data_search_space.append({\"class\": data_preprocessors[pp].__module__ + \".\" + data_preprocessors[pp].__name__, \"params\": json.loads(str(params))})\n",
     "    search_space.append({\"name\": \"data-pre-processor\", \"components\": pre_data_search_space})\n",
     "    \n",
     "    # feature-preprocessors\n",
@@ -200,7 +202,7 @@
     "    for pp in feature_preprocessors:\n",
     "        params = get_config_space(pp)\n",
     "        #print(pp, params)\n",
-    "        pre_feature_search_space.append({\"class\": feature_preprocessors[pp].__module__ + \".\" + feature_preprocessors[pp].__name__, \"params\": params})\n",
+    "        pre_feature_search_space.append({\"class\": feature_preprocessors[pp].__module__ + \".\" + feature_preprocessors[pp].__name__, \"params\": json.loads(str(params))})\n",
     "    search_space.append({\"name\": \"feature-pre-processor\", \"components\": pre_feature_search_space})\n",
     "    \n",
     "    # classifiers\n",
@@ -223,16 +225,136 @@
     "                    config_space_for_kernel.add_hyperparameter(hp)\n",
     "                config_space_for_kernel.add_hyperparameter(ConfigSpace.hyperparameters.Constant(\"kernel\", kernel))\n",
     "                params = config_json.write(config_space_for_kernel)\n",
-    "                classifier_search_space.append({\"class\": classifiers[c].__module__ + \".\" + classifiers[c].__name__, \"params\": params})\n",
+    "                classifier_search_space.append({\"class\": classifiers[c].__module__ + \".\" + classifiers[c].__name__, \"params\": json.loads(str(params))})\n",
     "        else:\n",
     "            params = get_config_space(c)\n",
-    "            classifier_search_space.append({\"class\": classifiers[c].__module__ + \".\" + classifiers[c].__name__, \"params\": params})\n",
-    "    search_space.append({\"name\": \"classifier\", \"components\": classifier_search_space})\n",
+    "            classifier_search_space.append({\"class\": classifiers[c].__module__ + \".\" + classifiers[c].__name__, \"params\": json.loads(str(params))})\n",
+    "    search_space.append({\"name\": \"learner\", \"components\": classifier_search_space})\n",
     "    return search_space\n",
     "                \n",
-    "search_space = get_autosklearn_searchspace()\n",
-    "with open('singularity/searchspace.json', 'w') as outfile:\n",
-    "    json.dump(search_space, outfile)"
+    "search_space = get_autosklearn_searchspace_classification()\n",
+    "with open('singularity/searchspace-classification.json', 'w') as outfile:\n",
+    "    json.dump(search_space, outfile, indent = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_autosklearn_searchspace_regression():\n",
+    "    \n",
+    "    def drop_parameter(config, hyperparameter):\n",
+    "        params_as_dict = json.loads(config)\n",
+    "        i = [j for j, param in enumerate(params_as_dict[\"hyperparameters\"]) if param[\"name\"] == hyperparameter][0]\n",
+    "        del params_as_dict[\"hyperparameters\"][i]\n",
+    "        return json.dumps(params_as_dict, indent = 4)\n",
+    "    \n",
+    "    def get_params(cls):\n",
+    "        params = []\n",
+    "        conf_space = cls.get_hyperparameter_search_space()\n",
+    "        for hp in conf_space.get_hyperparameters():\n",
+    "            if type(hp) == ConfigSpace.hyperparameters.CategoricalHyperparameter:\n",
+    "                params.append({\n",
+    "                    \"name\": hp.name,\n",
+    "                    \"type\": \"cat\",\n",
+    "                    \"values\": list(hp.choices)\n",
+    "                })\n",
+    "            elif issubclass(hp.__class__, ConfigSpace.hyperparameters.NumericalHyperparameter):\n",
+    "                params.append({\n",
+    "                    \"name\": hp.name,\n",
+    "                    \"type\": \"float-exp\" if hp.log else \"float\",\n",
+    "                    \"min\": hp.lower,\n",
+    "                    \"max\": hp.upper\n",
+    "                })\n",
+    "            elif type(hp) == ConfigSpace.hyperparameters.UnParametrizedHyperparameter:\n",
+    "                params.append({\n",
+    "                    \"name\": hp.name,\n",
+    "                    \"type\": \"cat\",\n",
+    "                    \"values\": [hp.value]\n",
+    "                })\n",
+    "            elif type(hp) == ConfigSpace.hyperparameters.Constant:\n",
+    "                params.append({\n",
+    "                    \"name\": hp.name,\n",
+    "                    \"type\": \"cat\",\n",
+    "                    \"values\": [hp.value]\n",
+    "                })\n",
+    "            else:\n",
+    "                raise Exception(\"Unsupported parameter type: \" + str(type(hp)))\n",
+    "        return params\n",
+    "    \n",
+    "    def get_config_space(cls):\n",
+    "        return config_json.write(cls.get_hyperparameter_search_space())\n",
+    "                \n",
+    "    regressors = {\n",
+    "        algos_regression.adaboost.AdaboostRegressor: sklearn.ensemble.AdaBoostRegressor,\n",
+    "        algos_regression.ard_regression.ARDRegression: sklearn.linear_model.ARDRegression,\n",
+    "        algos_regression.decision_tree.DecisionTree: sklearn.tree.DecisionTreeRegressor,\n",
+    "        algos_regression.extra_trees.ExtraTreesRegressor: sklearn.ensemble.ExtraTreesRegressor,\n",
+    "        algos_regression.gaussian_process.GaussianProcess: sklearn.gaussian_process.GaussianProcessRegressor,\n",
+    "        algos_regression.gradient_boosting.GradientBoosting: sklearn.ensemble.HistGradientBoostingRegressor,\n",
+    "        algos_regression.k_nearest_neighbors.KNearestNeighborsRegressor : sklearn.neighbors.KNeighborsRegressor,\n",
+    "        algos_regression.liblinear_svr.LibLinear_SVR: sklearn.svm.LinearSVR,\n",
+    "        algos_regression.libsvm_svr.LibSVM_SVR: sklearn.svm.SVR,\n",
+    "        algos_regression.mlp.MLPRegressor: sklearn.neural_network.MLPRegressor,\n",
+    "        algos_regression.random_forest.RandomForest: sklearn.ensemble.RandomForestRegressor,\n",
+    "        algos_regression.sgd.SGD: sklearn.linear_model.SGDRegressor\n",
+    "    }\n",
+    "    data_preprocessors = {\n",
+    "        algos_data_preprocessing.rescaling.minmax.MinMaxScalerComponent: sklearn.preprocessing.MinMaxScaler,\n",
+    "        algos_data_preprocessing.rescaling.normalize.NormalizerComponent: sklearn.preprocessing.Normalizer,\n",
+    "        algos_data_preprocessing.rescaling.power_transformer.PowerTransformerComponent: sklearn.preprocessing.PowerTransformer,\n",
+    "        algos_data_preprocessing.rescaling.quantile_transformer.QuantileTransformerComponent: sklearn.preprocessing.QuantileTransformer,\n",
+    "        algos_data_preprocessing.rescaling.robust_scaler.RobustScalerComponent: sklearn.preprocessing.RobustScaler,\n",
+    "        algos_data_preprocessing.rescaling.standardize.StandardScalerComponent: sklearn.preprocessing.StandardScaler,\n",
+    "        algos_data_preprocessing.variance_threshold.variance_threshold.VarianceThreshold: sklearn.feature_selection.VarianceThreshold\n",
+    "    }\n",
+    "    feature_preprocessors = {\n",
+    "        algos_feature_preprocessing.fast_ica.FastICA: sklearn.decomposition.FastICA,\n",
+    "        algos_feature_preprocessing.feature_agglomeration.FeatureAgglomeration: sklearn.cluster.FeatureAgglomeration,\n",
+    "        algos_feature_preprocessing.kernel_pca.KernelPCA: sklearn.decomposition.KernelPCA,\n",
+    "        algos_feature_preprocessing.kitchen_sinks.RandomKitchenSinks: sklearn.kernel_approximation.RBFSampler,\n",
+    "        algos_feature_preprocessing.nystroem_sampler.Nystroem: sklearn.kernel_approximation.Nystroem,\n",
+    "        algos_feature_preprocessing.pca.PCA: sklearn.decomposition.PCA,\n",
+    "        algos_feature_preprocessing.polynomial.PolynomialFeatures: sklearn.preprocessing.PolynomialFeatures,\n",
+    "        algos_feature_preprocessing.select_percentile_classification.SelectPercentileClassification: sklearn.feature_selection.SelectPercentile,\n",
+    "    }\n",
+    "    \n",
+    "    search_space = []\n",
+    "    \n",
+    "    # data-preprocessors\n",
+    "    pre_data_search_space = []\n",
+    "    for pp in data_preprocessors:\n",
+    "        params = get_config_space(pp)\n",
+    "        #print(pp, params)\n",
+    "        props = pp.get_properties()\n",
+    "        #print(pp)\n",
+    "        #print(\"handles_nominal_values\" in props and props[\"handles_nominal_values\"], \"handles_numerical_features\" in props and props[\"handles_numerical_features\"])\n",
+    "        pre_data_search_space.append({\"class\": data_preprocessors[pp].__module__ + \".\" + data_preprocessors[pp].__name__, \"params\": json.loads(str(params))})\n",
+    "    search_space.append({\"name\": \"data-pre-processor\", \"components\": pre_data_search_space})\n",
+    "    \n",
+    "    # feature-preprocessors\n",
+    "    pre_feature_search_space = []\n",
+    "    for pp in feature_preprocessors:\n",
+    "        params = get_config_space(pp)\n",
+    "        #print(pp, params)\n",
+    "        pre_feature_search_space.append({\"class\": feature_preprocessors[pp].__module__ + \".\" + feature_preprocessors[pp].__name__, \"params\": json.loads(str(params))})\n",
+    "    search_space.append({\"name\": \"feature-pre-processor\", \"components\": pre_feature_search_space})\n",
+    "    \n",
+    "    # learners\n",
+    "    regressor_search_space = []\n",
+    "    for c in regressors:\n",
+    "        params = get_config_space(c)\n",
+    "        regressor_search_space.append({\"class\": regressors[c].__module__ + \".\" + regressors[c].__name__, \"params\": json.loads(str(params))})\n",
+    "    search_space.append({\"name\": \"learner\", \"components\": regressor_search_space})\n",
+    "    return search_space\n",
+    "                \n",
+    "search_space = get_autosklearn_searchspace_regression()\n",
+    "with open('singularity/searchspace-regression.json', 'w') as outfile:\n",
+    "    json.dump(search_space, outfile, indent = 4)"
    ]
   },
   {
@@ -418,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
